--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "scripts": {
       "dev": "nodemon index.js"
     },
+    "type": "module",
     "keywords": [],
     "author": "",
     "license": "ISC",
