--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
