--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
